applications/python/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app
  namespace: default
  labels:
    app.kubernetes.io/name: python-app
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: python-app
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
